--- a/audit_exceptions/github_prerelease_allowlist.json
+++ b/audit_exceptions/github_prerelease_allowlist.json
@@ -10,6 +10,7 @@
   "comma-chameleon": "all",
   "creality-print": "any",
   "crypter": "all",
+  "db-browser-for-sqlite@nightly": "any",
   "defold@alpha": "any",
   "defold@beta": "any",
   "devtoys": "all",
